gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: mcrt-5a70dd4e-405a-4170-ad88-687e858979f2
  - name: http
    protocol: HTTP
    port: 80
  addresses:
  - type: NamedAddress
    value: gce-load-balancer-ipv4
  - type: NamedAddress
    value: gce-load-balancer-ipv6
---
  # https://cloud.google.com/kubernetes-engine/docs/how-to/configure-gateway-resources#configure_iap
  apiVersion: networking.gke.io/v1
  kind: GCPBackendPolicy
  metadata:
    name: iap-backend-policy
  spec:
    default:
      iap:
        enabled: true
        oauth2ClientSecret:
          name: iap-secret
        clientID: 966138216790-us6sue108a879v3vk2om9inn3ftpobkg.apps.googleusercontent.com
    targetRef:
      group: ""
      kind: Service
      name: gateway-wiki
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wiki-route
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  hostnames:
  - wiki.wisv.ch
  rules:
  - backendRefs:
    - name: gateway-wiki
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-wiki
  namespace: default
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: wiki
  type: NodePort
